static/css/styles.css
/******** ELEMENTS ********/
body,
html,
#root,
#app-container {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  color: #606060;
  font-family: "Nunito";
  letter-spacing: 1px;
  /* overflow: hidden; */
}

body,
html {
   overflow: hidden;
}

#app-container,
#home-container {
  margin: 0 auto;
  height: 100%;
}

#root {
  background-image: linear-gradient(
    to bottom,
    #37aac973,
    #fff8ce57 50%,
    #fafaf9ad 60%,
    #fff8ce42 63%,
    #dfa17961 83%,
    #d2561163 93%,
    #d5020273 98%
  );
}

.hide {
  display: none !important;
}

/******** FORMS ********/

[contenteditable]:focus {
  outline: 1px solid #2fadd3;
}

.form-input {
  margin: 10px 0 !important;
}

.form-check-input:checked {
  background-color: #e88686 !important;
  border: 0!important;
}

.form-check-input:focus,
.form-check-input::after,
.form-check-input:not(:disabled):not(.disabled):active:focus {
  color: #6e6b6b!important;
  outline: 0!important;
  border: 0!important;
  box-shadow: 0 0 0 0.1rem #a5f1ffb9 !important;
}

.form-check-input:hover{
  cursor: pointer !important;
}

/******** LINKS ********/

.hub-icon {
  text-decoration: none !important;
  color: white;
  font-size: 1.2em;
  font-weight: 700;
  padding-right: 5px;
}

.custom-link {
  color: #606060;
  font-weight: 900;
  border: 1px solid transparent;
  border-radius: 0.375rem;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 1px rgba(0, 0, 0, 0.075);
  margin: 5px 0 20px 0;
}

.custom-link a {
  text-decoration: none !important;
}

.custom-link:hover {
  color: rgb(255, 255, 255);
}

.ext-link {
  text-decoration: none !important;
  color: #2fadd3;
  font-weight: 700;
  font-size: 1.2em;
}

.ext-link:hover {
  color: #007cbf;
  font-weight: 900;
}

/******** BUTTONS ********/

.form-btn-div {
  text-align: center;
}

.form-btn {
  margin: 5px;
  background-color: #37a9c956 !important;
}

.form-btn:hover {
  color: white !important;
}

/******** ALERTS ********/

#user-alerts {
  font-size: 16px;
  font-weight: 600;
  width: 70%;
  padding: 1% 0;
  top: 15%;
  left: 15%;
  text-align: center;
  background-color: #ffd0bfb6;
  position: fixed;
  z-index: 10;
}

/******** NAV ********/

#nav-wrapper {
  height: 100px;
}

#thought-span {
  color: #e88686;
}

#flow-span {
  color: #fffdf9;
}

#nav-title {
  text-shadow: 0.75px 0.75px 1px #292a2a, 1px 0 1px #a8b1b1;
  font-family: "Caveat";
  font-weight: 700;
  font-size: 2.5em;
  letter-spacing: 0.4rem;
}

#nav-home a {
  text-decoration: none;
}

.navbar-link a {
  text-decoration: none;
  font-weight: 900;
  color: #606060;
  font-size: 1.6rem;
  margin: 0 8px;
  white-space: nowrap;
}

.navbar-link a:hover,
.hub-link a:hover {
  color: #e88686;
}

.mask-custom {
  backdrop-filter: blur(7px);
  background-image: linear-gradient(
    to bottom,
    #37a9c932,
    #37a9c927 30%,
    #37a9c917 50%,
    rgba(255, 248, 206, 0.067) 80%,
    rgba(250, 250, 249, 0.059) 99.9%
  );
}

#navbar-toggler,
#navbar-toggler:focus,
#navbar-toggler:active {
    outline: none;
    border: none;
    box-shadow: none;
    font-size: 2em;
    padding: 0 10px;
}

#main-nav-menu {
  width: 100%;
}

/******** ABOUT ********/

#about-container {
  backdrop-filter: blur(7px);
  background-image: linear-gradient(
    to bottom,
    #fffffff6,
    #fdfdfdec 50%,
    #fffffed5 60%,
    #fefefeb7 63%,
    #ffffff9b 83%,
    #ffffff83 93%,
    #ffffff47 98%
  );
  height: 78%;
  width: 80%;
  max-width: 1050px;
  margin-top: 35px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#about-container::-webkit-scrollbar {
  display: none;
}

#about-title {
  position: sticky;
  top: 0;
  z-index: 10;
  backdrop-filter: blur(7px);
  background-image: linear-gradient(to bottom, #ffffffc1, #fdfdfd4e 50%);
}

#about-container ol > li {
  list-style-type: none;
  counter-increment: item;
}

#about-container ol > li:before {
  content: counter(item);
  margin-right: 0.3em;
  font-family: "Noto Color Emoji";
  font-size: 1.2em;
  font-weight: bold;
}

#about-container ul li {
  list-style-type: none;
  line-height: 1.5em;
}

#about-container ul li:before {
  content: "-";
  font-size: 130%;
  font-weight: 900;
  line-height: 0;
  margin-right: 0.2em;
  position: relative;
  top: 0.08rem;
  color: #2fadd3;
  z-index: 5;
}

#about-footer {
  font-size: 1.2rem;
}

/******** CONTACT ********/

#contact-main {
  width: 50%;
  max-width: 500px;
  min-width: 300px;
  height: 400;
  background-color: #fffdf9e9;
  overflow-y: hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#contact-main::-webkit-scrollbar {
  display: none;
}

#contact-check, .form-check-input {
  margin-right: 10px !important;
}

radio:hover {
  cursor: pointer !important;
}

/******** PROFILE ********/

#profile-container {
  width: 60%;
  min-width: 350px;
  max-width: 450px;
  height: 400;
  background-color: #fffdf9e9;
}

.profile-form-input {
  margin: 7px 0;
}

/******** LOGIN ********/

#login-wrapper,
#signup-wrapper {
  margin: auto;
  width: 50%;
  max-width: 400px;
  min-width: 300px;
  background-color: #fffdf9e9;
}

#login-wrapper {
  height: 430px;
}

#login-btn-div {
  position: relative;
  top: 75px;
}

.auth-link a {
  text-decoration: none;
  color: #37a9c9 !important;
  font-weight: 900;
  font-size: 1.3em;
}

.auth-link a:hover {
  color: #e88686 !important;
}

/******** SIGNUP ********/

#signup-wrapper {
  height: 550px;
}

#pass-reqs {
  text-align: center;
  display: inline-block;
}

#pass-reqs li {
  text-align: left;
  font-size: 0.8em;
  list-style-type: "\2610   ";
}

.unchecked {
  list-style-type: "\2610   ";
}

.checked::marker {
  content: "✓   ";
  color: green;
}

/******** SIGNOUT ********/

#signout-container {
  width: 45%;
  min-width: 308px;
  max-width: 450px;
  height: 40%;
  min-height: 175px;
  margin: 100px auto;
  background-color: #fffdf9e9;
}


#signout-btn-div {
  margin-top: 15%;
}

/******** GREET ********/

#greeting-msg-row, #greet-link {
  position: relative;
}
/* ... */

